Initial install of Java Fx
App shows blank page after running main file